fixed bug where logo was to the left when uncovered

--- a/react-front-end/src/components/Landing.scss
+++ b/react-front-end/src/components/Landing.scss
@@ -6,17 +6,31 @@
   width: 100vw;
   height: 100vh;
   background-color: $primary_2;
-
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 0;
+
+  .logo {
+    // text-align: center;
+    color: $primary_1;
+    letter-spacing: 2.7px;
+    width: 50%;
+    font-family: "Futura";
+    font-weight: medium;
+    font-size: 4.5em;
+    display: flex;
+    justify-content: center;
+    &.uncovered {
+      z-index: 1;
+    }
+  }
 
   .log_in_btn {
     width: 30%;
     font-size: 1.5em;
-    margin-bottom: 10%;
     background-color: #31eaea;
     border: none;
     color: azure;
@@ -28,17 +42,14 @@
     }
   }
 
-  .logo {
-    text-align: center;
-    color: $primary_1;
-    letter-spacing: 2.7px;
-    width: 50%;
-    font-family: "Futura";
-    font-size: 3em;
-    margin-bottom: 10%;
 
+  .landing__paws {
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    z-index: 1;
     &.uncovered {
-      z-index: 1;
+      z-index: -1;
     }
   }
 
@@ -48,28 +59,28 @@
 		height: 40vw;
     
     &#foot_1 {
-      bottom: 50vh;
-      left: 15vw;
+      bottom: 35.0%;
+      left: 12.5vw;
       -webkit-animation-duration: 0.25s;
     }
     &#foot_2 {
-      bottom: 43vh;
-      right: 15vw;
+      bottom: 8vh;
+      left: 1.5vw;
       -webkit-animation-duration: 0.35s;
     }
     &#foot_3 {
-      bottom: 40vh;
-      right: 33vw;
+      bottom: 60%;
+      left: 3.3vw;
       -webkit-animation-duration: 0.45s;
     }
     &#foot_4 {
-      bottom: 55vh;
-      right: 10vw;
+      bottom: 55.5%;
+      right: 1.0%;
       -webkit-animation-duration: 0.55s;
     }
     &#foot_5 {
-      bottom: 35vh;
-      right: 60vw;
+      bottom: 0.5vh;
+      right: 6.0%;
       -webkit-animation-duration: 0.55s;
     }
 
@@ -88,7 +99,6 @@
       -webkit-animation-fill-mode: forwards;
     }
 	}
-
   
   @-webkit-keyframes slam-animation {
     0% {
